--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter_li
 github_user: intridea-east
 github_repo_count: 3
 github_show_profile_link: true
-github_skip_forks: true
+github_skip_forks: false
 
 # Twitter List
 twitter_list_owner: doitian
